# uminho

./: .gitignore  README.md  createExercise
LI/Pacman/: Pacman.cabal
LI/Pacman/app/: Pacman.hs
LI/Pacman/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
LI/sheet2/: ex1.hs  ex2.hs  ex3.hs
LI/sheet5/src/: Sheet5.hs
LI/sheet5/tests/: Sheet5_Spec.hs
LI/sheet7/: Gloss_Exemplo0.hs  Gloss_Exemplo2.hs  Gloss_Exemplo3.hs
LI/sheet7/Pacman/: LICENSE  Pacman.cabal
LI/sheet7/Pacman/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
PF/50questions/: Ex01.hs  Ex03.hs  Ex04.hs  Ex05.hs  Ex06.hs  Ex07.hs  Ex08.hs  Ex09.hs  Ex10.hs  Ex11.hs  Ex12.hs  Ex13.hs  Ex14.hs  Ex15.hs  Ex16.hs  Ex17.hs  Ex18.hs  Ex19.hs  Ex20.hs  Ex21.hs  Ex22.hs  Ex23.hs  Ex24.hs  Ex25.hs  Ex26.hs  Ex27.hs  Ex28.hs  Ex29.hs  Ex30.hs  Ex31.hs  Ex32.hs  Ex33.hs  Ex34.hs  Ex35.hs  Ex36.hs  Ex37.hs  Ex38.hs  Ex39.hs  Ex40.hs  Ex41.hs  (+12 more)
PF/Sheet1/: ex2.hs  ex3.hs  ex4.hs  ex5.hs  ex6.hs  ex7.hs
PF/Sheet2/: Ex01.hs  Ex02.hs  Ex03.hs  Ex04.hs  Ex05.hs  Ex06.hs  Ex07.hs
PF/Sheet4/: Ex1.hs  Ex2.hs  Ex3.hs  Ex9.hs
PF/Sheet5/: Ex1.hs  Ex2.hs  Ex2.sync-conflict-20221122-192212-A2WTMV5.hs
